# CODIGO_DE_RED

./: .env  .env.example  .env.production.example  .gitignore  ACCESO_RED.md  CODIGO_COMPLETO.md  DEPLOYMENT.md  GUIA_DASHBOARD.md  INSTRUCCIONES_ACCESO.md  README.md  UPDATE_SERVER.md  docker-compose.yml  generate_remaining_files.py  start.sh
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260222_0749_initial_schema.py  20260222_2000_add_companies_table.py  20260222_2001_update_companies_fields.py  20260222_2334_make_rpu_optional.py  20260222_2344_create_documents_table.py  20260223_0100_create_compliance_tables.py  20260223_0530_add_projects_module.py  20260223_0530_add_projects_module.py.backup  20260226_0428_create_projects_tables.py  20260226_0532_fix_projects_enum_and_missing_column.py  20260228_125837_add_tenant_contact_fields.py  20260228_1840_add_quote_items_catalog.py  20260228_1854_rename_quote_items_to_quote_lines.py  20260228_2140_add_security_levels.py  20260228_2140_merge_branches.py  20260228_2336_add_numero_transformadores_and_.py  20260228_2400_add_iva_vigencia_comentarios_to_quotes.py  20260301_0000_make_rpu_and_tipo_suministro_nullable.py  20260301_1200_add_photo_url_to_users.py  20260306_2154_create_superadmin_organizations_table.py  20260307_0000_add_superadmin_id_to_tenants.py  20260307_0100_add_pagos_to_quotes.py
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py
backend/app/core/: audit.py  config.py  minio_client.py  rbac.py  security.py  tenant.py
backend/app/db/: base.py  session.py
backend/app/models/: audit_log.py  company.py  compliance.py  document.py  evidence.py  license.py  module.py  obligation.py  permission.py  project.py  quote.py  quote_item.py  role.py  security_level.py  superadmin_organization.py  tenant.py  user.py
backend/app/schemas/: auth.py  (+8 more)
backend/docs/: MIGRATIONS.md  MIGRATION_HARDENING_REPORT.md
backend/scripts/: check_migrations.py  seed.py  seed_compliance.py  test_classification.sh  test_cors.sh  test_migrations.sh  validate_all.sh
(+50 files in other folders)
